# blend

./: CMakeLists.txt  abi.h  build.ninja  cc.h  cpu.cc  cpu.h  fused.c  fused.h  next.c  pipeline.c  pipeline.cc  pipeline.h  pipeline_avx.cc  pipeline_avx2.cc  pipeline_sse.cc  pipeline_sse41.cc  speed_of_light.c  speed_of_light.h  srgb.c  srgb.cc  srgb.h  sse.h  test.c  test.cc  unused.h
